err/frasco-angular.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Assets-0.10.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/ago-0.0.92.egg-info'...
Listing './lib/python3.5/site-packages/blinker'...
Listing './lib/python3.5/site-packages/blinker-1.4.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/cssmin-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/easywebassets'...
Listing './lib/python3.5/site-packages/easywebassets-0.1.egg-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/frasco'...
Listing './lib/python3.5/site-packages/frasco/actions'...
Listing './lib/python3.5/site-packages/frasco/cli'...
Listing './lib/python3.5/site-packages/frasco/declarative'...
Listing './lib/python3.5/site-packages/frasco/templating'...
Listing './lib/python3.5/site-packages/frasco/testsuite'...
Listing './lib/python3.5/site-packages/frasco-0.6.14.egg-info'...
Listing './lib/python3.5/site-packages/frasco_angular'...
Listing './lib/python3.5/site-packages/frasco_angular/static'...
Listing './lib/python3.5/site-packages/frasco_angular/templates'...
Listing './lib/python3.5/site-packages/frasco_angular-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/frasco_assets'...
Listing './lib/python3.5/site-packages/frasco_assets-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/honcho'...
Listing './lib/python3.5/site-packages/honcho/export'...
Listing './lib/python3.5/site-packages/honcho/export/templates'...
Listing './lib/python3.5/site-packages/honcho/export/templates/runit'...
Listing './lib/python3.5/site-packages/honcho/export/templates/runit/log'...
Listing './lib/python3.5/site-packages/honcho/export/templates/supervisord'...
Listing './lib/python3.5/site-packages/honcho/export/templates/upstart'...
Listing './lib/python3.5/site-packages/honcho-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/htmlmin'...
Listing './lib/python3.5/site-packages/htmlmin/python3html'...
Listing './lib/python3.5/site-packages/htmlmin-0.1.12.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jinja_layout-0.1.egg-info'...
Listing './lib/python3.5/site-packages/jinja_macro_tags-0.1.egg-info'...
Listing './lib/python3.5/site-packages/jsmin'...
Listing './lib/python3.5/site-packages/jsmin-2.2.2.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_slugify-1.2.4.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/slugify'...
Listing './lib/python3.5/site-packages/speaklater-1.3.egg-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/webassets'...
Listing './lib/python3.5/site-packages/webassets/ext'...
Listing './lib/python3.5/site-packages/webassets/filter'...
Listing './lib/python3.5/site-packages/webassets/filter/cssrewrite'...
Listing './lib/python3.5/site-packages/webassets/filter/jspacker'...
Listing './lib/python3.5/site-packages/webassets/filter/rjsmin'...
Listing './lib/python3.5/site-packages/webassets-0.12.1.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
